--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /SGRP.Aliexpress/SGRP.Aliexpress.Data/obj
 /SGRP.Aliexpress/SGRP.Aliexpress.Bussiness/obj
 /SGRP.Aliexpress/.vs/SGRP.Aliexpress/v16
+/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/bin/Debug
+/SGRP.Aliexpress/SGRP.Aliexpress.Web/bin/Debug/netcoreapp2.2
+/SGRP.Aliexpress/SGRP.Aliexpress.Web/obj/Debug/netcoreapp2.2
+/SGRP.Aliexpress/SGRP.Aliexpress.Web/obj
