--- a/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/SGRP.Aliexpress.CrawlService.csproj
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/SGRP.Aliexpress.CrawlService.csproj
@@ -2,11 +2,22 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SGRP.Aliexpress.Bussiness\SGRP.Aliexpress.Bussiness.csproj" />
+    <ProjectReference Include="..\SGRP.Aliexpress.Data\SGRP.Aliexpress.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
