--- a/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/SGRP.Aliexpress.CrawlService.csproj
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/SGRP.Aliexpress.CrawlService.csproj
@@ -5,7 +5,17 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
+    <Compile Remove="Services\ChilkatService.cs" />
+    <Compile Remove="Services\RequestService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.1" />
   </ItemGroup>
 
