--- a/SGRP.Aliexpress/SGRP.Aliexpress.Bussiness/SGRP.Aliexpress.Bussiness.csproj
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.Bussiness/SGRP.Aliexpress.Bussiness.csproj
@@ -5,4 +5,8 @@
 	<GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
