--- a/SGRP.Aliexpress/SGRP.Aliexpress.Data/SGRP.Aliexpress.Data.csproj
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.Data/SGRP.Aliexpress.Data.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\SGRP.Aliexpress.Bussiness\SGRP.Aliexpress.Bussiness.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
