--- a/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/appsettings.json
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=(local);Database=DotNetAliexpress;User ID=sa;Password=123456;MultipleActiveResultSets=true"
+    "DatabaseConnection": "Server=RUPIC;Database=DotNetAliexpress;User ID=sa;Password=123456;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
