--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@
 /SGRP.Aliexpress/SGRP.Aliexpress.Web/bin/Debug/netcoreapp2.2
 /SGRP.Aliexpress/SGRP.Aliexpress.Web/obj/Debug/netcoreapp2.2
 /SGRP.Aliexpress/SGRP.Aliexpress.Web/obj
+/SGRP.Aliexpress/SGRP.Aliexpress.Bussiness/bin/Release/netcoreapp2.2
+/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/bin/Release/netcoreapp2.2
+/SGRP.Aliexpress/SGRP.Aliexpress.Data/bin/Release/netcoreapp2.2
+/SGRP.Aliexpress/SGRP.Aliexpress.Helper/bin/Debug
+/SGRP.Aliexpress/SGRP.Aliexpress.Helper/obj/Debug/netcoreapp2.2
+/SGRP.Aliexpress/SGRP.Aliexpress.Helper/obj
+/SGRP.Aliexpress/SGRP.Aliexpress.Web/bin/Release/netcoreapp2.2
+/SGRP.Aliexpress/SGRP.Aliexpress.Helper/bin/Release/netcoreapp2.2
