--- a/SGRP.Aliexpress/SGRP.Aliexpress.Web/appsettings.json
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.Web/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DatabaseConnection": "Server=(local);Database=DotNetAliexpress;User ID=sa;Password=123456;MultipleActiveResultSets=true"
   },
+  "RedisServer": {
+    "RedisAddress": "localhost:5555,name=ScheduledTask"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
