--- a/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/SGRP.Aliexpress.CrawlService.csproj
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.CrawlService/SGRP.Aliexpress.CrawlService.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.21" />
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
   </ItemGroup>
