--- a/SGRP.Aliexpress/SGRP.Aliexpress.Web/appsettings.json
+++ b/SGRP.Aliexpress/SGRP.Aliexpress.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=INSTANCE-ALIEXP\\SQLEXPRESS;Database=DotNetAliexpress;User ID=sa;Password=P@ssword123;MultipleActiveResultSets=true"
+    "DatabaseConnection": "Server=RUPIC;Database=DotNetAliexpress;User ID=sa;Password=123456;MultipleActiveResultSets=true"
   },
   "RedisServer": {
     "RedisAddress": "localhost:5555,name=ScheduledTask"
